[tool.poetry]
name = "exercises"
version = "0.0.1"
description = ""
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
streamlit = "*"
watchdog = "*"
pandas = "*"
altair = "*"
jupyterlab = "*"
numpy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
