[tool.poetry]
name = "exercises"
version = "0.0.1"
description = ""
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
streamlit = "*"
watchdog = "*"
pandas = "*"
altair = "*"
jupyterlab = "*"
numpy = "*"

[tool.poetry.group.dev.dependencies]
# "^23.9.1"
black = "*"
# "^6.1.0"
flake8 = "*"
# "^5.10.1"
isort = "*"
# "^0.1.9"
precisely = "*"
# "^0.13.11"
ipdb = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
