[tool.poetry]
name = "exercises"
version = "0.0.1"
description = ""
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
streamlit = "*"
watchdog = "*"
pandas = "*"
altair = "*"
seaborn = "*"
matplotlib = "*"
jupyterlab = "~4"
numpy = "*"
nltk = "*"
scipy = "*"
jupyterlab-sql-editor = "*"

python-lsp-server = "*"
jupyterlab-lsp = "*"
jupyterlab-code-formatter = "*"  # https://jupyterlab-code-formatter.readthedocs.io/configuration.html
#aquirdturtle_collapsible_headings = "*" # jupyterlab 3.0
#jupyterlab-drawio = "*"  # jupyterlab 3.0
jupyterlab_latex = "*"
jupyterlab-git = "*"
theme-darcula = "*"
ipysheet = "*"
#jupyterlab_voyager = "*"  # jupyter labextension install jupyterlab_voyager
sidecar = "*"
ipywidgets = "*"
jupyterlab-widgets = "*"


[tool.poetry.group.dev.dependencies]
# "^23.9.1"
black = "*"
# "^6.1.0"
flake8 = "*"
# "^5.10.1"
isort = "*"
# "^0.1.9"
precisely = "*"
# "^0.13.11"
ipdb = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
